--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>тест dffsdf dfsdтест 2222</title>
+		<title>Молодёжный бит</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -91,7 +91,7 @@
 							<h1>Молодёжный бит</h1>
 							<p>Всероссийский хакатон <br> для талантливых IT-специалистов</p>
 							<ul>
-								<li>Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей</li>
+								<li>Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей и&nbsp;захватывающее путешествие по&nbsp;России</li>
 								<li>Приходи кодить на&nbsp;офлайн-площадку в&nbsp;Москве</li>
 								<li>Участвуй онлайн из&nbsp;любой точки страны</li>
 								<li>Регистрируйся до&nbsp;14&nbsp;февраля</li>
@@ -317,46 +317,62 @@
 						<div class="section-title">
 							<h2>Призовой фонд</h2>
 						</div>
-						<div class="sPrize__amount"> <b>1&nbsp;000&nbsp;000 руб</b><span>3&nbsp;призовых места в&nbsp;каждом кейсе</span>
+						<div class="sPrize__amount"> <b>1&nbsp;000&nbsp;000 рублей</b><span>+ 60&nbsp;уникальных туристических поездок по&nbsp;России</span>
 						</div>
 						<div class="sPrize__row row">
-							<div class="col-lg-4">
+							<div class="col-lg-6">
 								<div class="sPrize__item">
-									<div class="sPrize__sum d-none d-lg-block">100&nbsp;000 руб
-									</div>
-									<div class="sPrize__position sPrize__position--first"><span>1&nbsp;место</span>
-										<svg class="icon icon-star-first ">
-											<use xlink:href="img/svg/sprite.svg#star-first"></use>
+									<div class="sPrize__position"><span>1&nbsp;место</span>
+										<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g clip-path="url(#clip0_425_5283)">
+												<path d="M1.17188 5.4818H1.88281V7.44797C1.88281 8.09516 2.4075 8.61984 3.05469 8.61984C3.70187 8.61984 4.22656 8.09516 4.22656 7.44797V5.4818H4.9375C5.58469 5.4818 6.10938 4.95711 6.10938 4.30992C6.10938 3.66273 5.58469 3.13805 4.9375 3.13805H4.22656V1.17188C4.22656 0.524687 3.70187 0 3.05469 0C2.4075 0 1.88281 0.524687 1.88281 1.17188V3.13805H1.17188C0.524687 3.13805 0 3.66273 0 4.30992C0 4.95711 0.524687 5.4818 1.17188 5.4818Z" fill="#B3E427"></path>
+												<path d="M38.8281 34.5182H38.1172V32.552C38.1172 31.9048 37.5925 31.3802 36.9453 31.3802C36.2981 31.3802 35.7734 31.9048 35.7734 32.552V34.5182H35.0625C34.4153 34.5182 33.8906 35.0429 33.8906 35.6901C33.8906 36.3373 34.4153 36.862 35.0625 36.862H35.7734V38.8281C35.7734 39.4753 36.2981 40 36.9453 40C37.5925 40 38.1172 39.4753 38.1172 38.8281V36.862H38.8281C39.4753 36.862 40 36.3373 40 35.6901C40 35.0429 39.4753 34.5182 38.8281 34.5182Z" fill="#B3E427"></path>
+												<path d="M5.1875 16.2344C5.1875 14.5234 5.42109 12.8662 5.85617 11.2917C2.28008 14.272 0 18.7573 0 23.7656C0 32.7173 7.28274 40 16.2344 40C21.2426 40 25.7279 37.7199 28.7082 34.1438C27.1338 34.5789 25.4766 34.8125 23.7656 34.8125C13.5216 34.8125 5.1875 26.4784 5.1875 16.2344Z" fill="#B3E427"></path>
+												<path d="M20.3982 16.2352L23.7612 12.8722L27.1242 16.2352L23.7612 19.5982L20.3982 16.2352Z" fill="#B3E427"></path>
+												<path d="M23.7656 32.4688C32.7173 32.4688 40 25.186 40 16.2344C40 7.28273 32.7173 0 23.7656 0C14.814 0 7.53125 7.28273 7.53125 16.2344C7.53125 25.186 14.814 32.4688 23.7656 32.4688Z" fill="#B3E427"></path>
+												<path fill-rule="evenodd" clip-rule="evenodd" d="M20.1378 22.8905H17.9156V21.7377H16.6667V20.5294H17.9156V10.1967H19.9706L20.0591 11.7305H20.0886C20.4688 11.2455 21.0325 10.8358 21.7798 10.5015C22.5336 10.1672 23.4153 10 24.4248 10C26.1094 10 27.4597 10.4326 28.4758 11.2979C29.4918 12.1566 29.9998 13.2546 29.9998 14.5918V14.9064C29.9998 16.2568 29.4918 17.3646 28.4758 18.2298C27.4663 19.0886 26.1192 19.5179 24.4346 19.5179C23.4317 19.5179 22.5697 19.377 21.8486 19.0951C21.1341 18.8067 20.5639 18.4199 20.1378 17.9349V20.5294H24.7216V21.7377H20.1378V22.8905ZM20.1378 13.9527V15.5554C20.4131 16.0667 20.8687 16.5157 21.5045 16.9025C22.1469 17.2826 22.9204 17.4727 23.825 17.4727C25.1622 17.4727 26.1422 17.2302 26.7649 16.7451C27.3942 16.2601 27.7088 15.657 27.7088 14.9359V14.5721C27.7088 13.8511 27.3942 13.2513 26.7649 12.7728C26.1422 12.2877 25.1622 12.0452 23.825 12.0452C22.9204 12.0452 22.1502 12.2385 21.5143 12.6253C20.885 13.0055 20.4262 13.4479 20.1378 13.9527Z" fill="white"></path>
+											</g>
+											<defs>
+												<clippath id="clip0_425_5283">
+													<rect width="40" height="40" fill="white"></rect>
+												</clippath>
+											</defs>
 										</svg>
-										<div class="sPrize__sum d-lg-none">100&nbsp;000 руб
-										</div>
+										<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g clip-path="url(#clip0_425_5293)">
+												<path d="M25.1562 3.047C25.1562 2.65934 25.4717 2.34387 25.8594 2.34387H29.9219C30.3096 2.34387 30.625 2.65934 30.625 3.047V7.23567H32.9688V3.047C32.9688 1.36692 31.602 0.00012207 29.9219 0.00012207H25.8594C24.1793 0.00012207 22.8125 1.36692 22.8125 3.047V7.23567H25.1562V3.047Z" fill="#B3E427"></path>
+												<path d="M14.2452 37.6564C13.7331 36.8608 13.4375 35.9189 13.4375 34.922V17.3529H2.73437C1.22664 17.3529 0 18.5795 0 20.0873V34.922C0 36.2971 1.02039 37.4379 2.34375 37.6281V38.828C2.34375 39.4752 2.86844 39.9999 3.51562 39.9999C4.16281 39.9999 4.6875 39.4752 4.6875 38.828V37.6563H14.2452V37.6564ZM4.6875 21.6498C4.6875 21.0026 5.21219 20.4779 5.85937 20.4779C6.50656 20.4779 7.03125 21.0026 7.03125 21.6498V33.3595C7.03125 34.0067 6.50656 34.5314 5.85937 34.5314C5.21219 34.5314 4.6875 34.0067 4.6875 33.3595V21.6498Z" fill="#B3E427"></path>
+												<path d="M10.9375 13.1642C10.9375 12.7765 11.253 12.461 11.6406 12.461H13.4375V12.3138C13.4375 11.5274 13.6172 10.7824 13.9377 10.1173H11.6406C9.96055 10.1173 8.59375 11.4841 8.59375 13.1642V15.0091H10.9375V13.1642Z" fill="#B3E427"></path>
+												<path d="M37.2656 9.57947H18.5156C17.0079 9.57947 15.7812 10.8061 15.7812 12.3138V34.922C15.7812 36.2971 16.8016 37.4379 18.125 37.6281V38.828C18.125 39.4752 18.6497 39.9999 19.2969 39.9999C19.9441 39.9999 20.4688 39.4752 20.4688 38.828V37.6563H35.3125V38.828C35.3125 39.4752 35.8372 39.9999 36.4844 39.9999C37.1316 39.9999 37.6562 39.4752 37.6562 38.828V37.6281C38.9795 37.4379 40 36.2971 40 34.922V12.3138C40 10.806 38.7734 9.57947 37.2656 9.57947ZM22.8125 33.3595C22.8125 34.0067 22.2878 34.5314 21.6406 34.5314C20.9934 34.5314 20.4688 34.0067 20.4688 33.3595V13.8763C20.4688 13.2292 20.9934 12.7045 21.6406 12.7045C22.2878 12.7045 22.8125 13.2292 22.8125 13.8763V33.3595ZM34.1406 34.5314C33.4934 34.5314 32.9688 34.0067 32.9688 33.3595V13.8763C32.9688 13.2292 33.4934 12.7045 34.1406 12.7045C34.7878 12.7045 35.3125 13.2292 35.3125 13.8763V33.3595C35.3125 34.0067 34.7878 34.5314 34.1406 34.5314Z" fill="#B3E427"></path>
+											</g>
+											<defs>
+												<clippath id="clip0_425_5293">
+													<rect width="40" height="40" fill="white"></rect>
+												</clippath>
+											</defs>
+										</svg>
+									</div>
+									<div class="sPrize__sum"><b>250&nbsp;000 рублей</b><span>+ уикенд-путешествие для каждого победителя</span>
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-4 order-lg-first">
+							<div class="col-lg-6">
 								<div class="sPrize__item">
-									<div class="sPrize__sum d-none d-lg-block">85&nbsp;000 руб
-									</div>
-									<div class="sPrize__position sPrize__position--second"><span>2&nbsp;место</span>
-										<svg class="icon icon-star-second ">
-											<use xlink:href="img/svg/sprite.svg#star-second"></use>
+									<div class="sPrize__position"><span>2&nbsp;и&nbsp;3&nbsp;место</span>
+										<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g clip-path="url(#clip0_425_5293)">
+												<path d="M25.1562 3.047C25.1562 2.65934 25.4717 2.34387 25.8594 2.34387H29.9219C30.3096 2.34387 30.625 2.65934 30.625 3.047V7.23567H32.9688V3.047C32.9688 1.36692 31.602 0.00012207 29.9219 0.00012207H25.8594C24.1793 0.00012207 22.8125 1.36692 22.8125 3.047V7.23567H25.1562V3.047Z" fill="#B3E427"></path>
+												<path d="M14.2452 37.6564C13.7331 36.8608 13.4375 35.9189 13.4375 34.922V17.3529H2.73437C1.22664 17.3529 0 18.5795 0 20.0873V34.922C0 36.2971 1.02039 37.4379 2.34375 37.6281V38.828C2.34375 39.4752 2.86844 39.9999 3.51562 39.9999C4.16281 39.9999 4.6875 39.4752 4.6875 38.828V37.6563H14.2452V37.6564ZM4.6875 21.6498C4.6875 21.0026 5.21219 20.4779 5.85937 20.4779C6.50656 20.4779 7.03125 21.0026 7.03125 21.6498V33.3595C7.03125 34.0067 6.50656 34.5314 5.85937 34.5314C5.21219 34.5314 4.6875 34.0067 4.6875 33.3595V21.6498Z" fill="#B3E427"></path>
+												<path d="M10.9375 13.1642C10.9375 12.7765 11.253 12.461 11.6406 12.461H13.4375V12.3138C13.4375 11.5274 13.6172 10.7824 13.9377 10.1173H11.6406C9.96055 10.1173 8.59375 11.4841 8.59375 13.1642V15.0091H10.9375V13.1642Z" fill="#B3E427"></path>
+												<path d="M37.2656 9.57947H18.5156C17.0079 9.57947 15.7812 10.8061 15.7812 12.3138V34.922C15.7812 36.2971 16.8016 37.4379 18.125 37.6281V38.828C18.125 39.4752 18.6497 39.9999 19.2969 39.9999C19.9441 39.9999 20.4688 39.4752 20.4688 38.828V37.6563H35.3125V38.828C35.3125 39.4752 35.8372 39.9999 36.4844 39.9999C37.1316 39.9999 37.6562 39.4752 37.6562 38.828V37.6281C38.9795 37.4379 40 36.2971 40 34.922V12.3138C40 10.806 38.7734 9.57947 37.2656 9.57947ZM22.8125 33.3595C22.8125 34.0067 22.2878 34.5314 21.6406 34.5314C20.9934 34.5314 20.4688 34.0067 20.4688 33.3595V13.8763C20.4688 13.2292 20.9934 12.7045 21.6406 12.7045C22.2878 12.7045 22.8125 13.2292 22.8125 13.8763V33.3595ZM34.1406 34.5314C33.4934 34.5314 32.9688 34.0067 32.9688 33.3595V13.8763C32.9688 13.2292 33.4934 12.7045 34.1406 12.7045C34.7878 12.7045 35.3125 13.2292 35.3125 13.8763V33.3595C35.3125 34.0067 34.7878 34.5314 34.1406 34.5314Z" fill="#B3E427"></path>
+											</g>
+											<defs>
+												<clippath id="clip0_425_5293">
+													<rect width="40" height="40" fill="white"></rect>
+												</clippath>
+											</defs>
 										</svg>
-										<div class="sPrize__sum d-lg-none">85&nbsp;000 руб
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-lg-4">
-								<div class="sPrize__item">
-									<div class="sPrize__sum d-none d-lg-block">65&nbsp;000 руб
-									</div>
-									<div class="sPrize__position sPrize__position--third"><span>3&nbsp;место</span>
-										<svg class="icon icon-star-third ">
-											<use xlink:href="img/svg/sprite.svg#star-third"></use>
-										</svg>
-										<div class="sPrize__sum d-lg-none">65&nbsp;000 руб
-										</div>
-									</div>
+									</div><b>уикенд-путешествие <br> для каждого победителя</b>
 								</div>
 							</div>
 						</div>
