--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,45 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Молодёжный бит</title>
+		<title>17-19 февраля 2023 г.:  Хакатон «‎Молодёжный бит»‎ для талантливых ИТ-специалистов</title>
 		<meta name="description" content="о чем страница">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
-		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> 
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!">
+<meta property="og:type" content="website" />
+<meta property="og:title" content="17-19 февраля 2023 г.:  Хакатон «‎Молодёжный бит»‎ для талантливых ИТ-специалистов" />
+<meta property="og:description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!" />
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no"><meta name="format-detection" content="telephone=no"> 
+<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="favicon/site.webmanifest">
+<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#b3e427">
+<meta name="msapplication-config" content="favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+		<!-- Yandex.Metrika counter-->
+		<script type="text/javascript">
+			(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+			m[i].l=1*new Date();
+			for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+			k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+			
+			ym(92125611, "init", {
+				clickmap:true,
+				trackLinks:true,
+				accurateTrackBounce:true,
+				webvisor:true,
+				trackHash:true
+			});
+		</script>
+		<noscript>
+			<div><img src="https://mc.yandex.ru/watch/92125611" style="position:absolute; left:-9999px;" alt=""></div>
+		</noscript>
+		<!-- /Yandex.Metrika counter--><script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src='https://vk.com/js/api/openapi.js?169',t.onload=function(){VK.Retargeting.Init("VK-RTRG-1656020-eExLd"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script>
+<noscript>
+<img src="https://vk.com/rtrg?p=VK-RTRG-1656020-eExLd" style="position:fixed; left:-999px;" alt=""/>
+</noscript>
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
