edit sections paddings

--- a/public/index.html
+++ b/public/index.html
@@ -673,7 +673,7 @@
 						</div>
 						<div class="sPersons__title">Жюри
 						</div>
-						<div class="sPersons__slider sPersons__slider--js swiper">
+						<div class="sPersons__slider sPersons__slider--js swiper mb-0">
 							<div class="swiper-wrapper">
 									<div class="sPersons__slide swiper-slide">
 										<div class="sPersons__item">
@@ -915,7 +915,7 @@
 						<div class="sLogos__title-sub"> Партнеры
 						</div>
 						<div class="sLogos__slider-wrap">
-							<div class="sLogos__slider sLogos__slider--js swiper-slider">
+							<div class="sLogos__slider sLogos__slider--js swiper-slider mb-0">
 								<div class="swiper-wrapper">
 									<div class="sLogos__slide swiper-slide">
 										<div class="sLogos__item">
@@ -1054,7 +1054,7 @@
 									<div class="sContact__row-sm row">
 										<div class="col-sm-auto">
 											<h4>Для участников</h4>
-											<div class="sContact__item"><small>Адрес электронной почты</small><a href="email:example@mail.com">example@mail.com</a>
+											<div class="sContact__item"><small>Адрес электронной почты</small><a href="email:support@youthbit.ru">support@youthbit.ru</a>
 											</div>
 										</div>
 										<div class="col-sm-auto">
