--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -7,7 +7,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="17-19 февраля 2023 г.:  Хакатон «‎Молодёжный бит»‎ для талантливых ИТ-специалистов" />
 <meta property="og:description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!" />
-		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no"><meta name="format-detection" content="telephone=no"> 
+		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no"><meta name="format-detection" content="telephone=no">
 <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -17,6 +17,8 @@
 <meta name="msapplication-TileColor" content="#b3e427">
 <meta name="msapplication-config" content="favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+<meta name="yandex-verification" content="b9aefdd717c962c6" />
+<meta name="google-site-verification" content="B94CmZLxXKLi2EpCf0VeiHS8XgfdaO7rnmmegyIJkO0" />
 		<!-- Yandex.Metrika counter-->
 		<script type="text/javascript">
 			(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
