--- a/public/index.html
+++ b/public/index.html
@@ -247,22 +247,33 @@
 						</div>
 						<div class="tabs">
 							<div class="tabs__caption">
-								<div class="tabs__btn active"><span>Дашборд регионов</span></div>
+								<div class="tabs__btn active"><span>Онбординг</span></div>
+								<div class="tabs__btn"><span>Дашборд</span></div>
 								<div class="tabs__btn"><span>Цифровой помощник</span></div>
-								<div class="tabs__btn"><span>Росмолодёжь-Digital</span></div>
-								<div class="tabs__btn"><span>Объединяя молодёжь</span></div>
+								<div class="tabs__btn"><span>Молодёжный туризм</span></div>
 							</div>
 							<div class="tabs__wrap">
 								<div class="tabs__content active">
 									<div class="tabs__content-wrap">
-										<h4>Дашборд регионов</h4>
-										<div class="small">Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</div>
+										<h4>Онбординг</h4>
+										<div class="small">Разработай digital-систему для онбординга новых сотрудников с&nbsp;элементами геймификации</div>
 										<div class="tabs__tags">
-											<div class="btn">Mobile</div>
-											<div class="btn">Web</div>
-											<div class="btn">CV</div>
+											<div class="row">
+												<div class="col-auto">
+													<div class="btn">Управление персоналом</div>
+												</div>
+												<div class="col-auto">
+													<div class="btn">Mobile</div>
+												</div>
+												<div class="col-auto">
+													<div class="btn">Чат-бот</div>
+												</div>
+											</div>
 										</div>
-										<p>Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.</p><a class="tabs__content-btn" href="#">Хочу решить кейс</a>
+										<p>Миссия Росмолодёжи&nbsp;&mdash; создать среду, которая поможет молодым найти и&nbsp;реализовать свои мечты и&nbsp;таланты в&nbsp;нашей стране.</p>
+										<p>Каждый год в&nbsp;команду Росмолодёжи приходят новые специалисты, которых необходимо интегрировать в&nbsp;экосистему ведомства и&nbsp;его корпоративную культуру.</p>
+										<p>Руководителям подразделений и&nbsp;коллегам сложно мгновенно погрузить нового сотрудника в&nbsp;специфику его деятельности. Необходимые для адаптации новичков документы хранятся на&nbsp;различных ресурсах. Новый человек попадает в&nbsp;активный информационный поток, с&nbsp;большим количеством событий, мероприятий, внешних и&nbsp;внутренних коммуникаций. В&nbsp;результате у&nbsp;многих в&nbsp;начале работы возникают сложности с&nbsp;поиском необходимых материалов и&nbsp;контактов.</p>
+										<p>Перед участниками хакатона стоит задача разработать информационный сервис&nbsp;&mdash; инструмент для современного и&nbsp;качественного процесса адаптации, помогающий в&nbsp;поиске необходимых материалов и&nbsp;выстраивании эффективных коммуникаций между новыми сотрудниками, HR-службой и&nbsp;руководством.</p><a class="tabs__content-btn" href="#">Хочу решить кейс</a>
 									</div>
 									<div class="tabs__case-manager">
 										<div class="tabs__case-manager-btn">
@@ -281,16 +292,50 @@
 															</div>
 														</div>
 													</div>
-													<div class="case-slider__slide swiper-slide">
-														<div class="case-slider__item">
-															<div class="case-slider__img-wrap">
-																<div class="img-wrap-center"><img src="img/svg/cases-logo-1.svg" alt="" loading="lazy"/>
-																</div>
-															</div>
-															<div class="case-slider__title">Федеральное агентство по&nbsp;делам молодёжи
-															</div>
-														</div>
-													</div>
+												</div>
+											</div>
+											<div class="swiper-pagination"></div>
+											<div class="tabs__links"><a class="tabs__content-link" href="#">
+													<svg class="icon icon-sCases-video ">
+														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
+													</svg><span>Видеоинтервью</span></a><a class="tabs__content-link" href="#">
+													<svg class="icon icon-sCases-project ">
+														<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
+													</svg><span>Презентация кейса</span></a><a class="tabs__content-link" href="#">
+													<svg class="icon icon-sContact-win ">
+														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
+													</svg><span>Победители и&nbsp;призеры</span></a></div>
+										</div>
+									</div>
+								</div>
+								<div class="tabs__content">
+									<div class="tabs__content-wrap">
+										<h4>Дашборд</h4>
+										<div class="small">Разработай дашборд&nbsp;&mdash; инструмент анализа и&nbsp;визуализации данных, поступающих от&nbsp;субъектов молодёжной политики России</div>
+										<div class="tabs__tags">
+											<div class="row">
+												<div class="col-auto">
+													<div class="btn">Дашборды</div>
+												</div>
+												<div class="col-auto">
+													<div class="btn">Аналитика</div>
+												</div>
+												<div class="col-auto">
+													<div class="btn">Web</div>
+												</div>
+											</div>
+										</div>
+										<p>Информационный ресурс Росмолодёжи (ФГАИС &laquo;Молодежь России&raquo;) позволяет собирать данные о&nbsp;субъектах государственной молодёжной политики и&nbsp;результатах их&nbsp;деятельности более, чем по&nbsp;400 показателям из&nbsp;11&nbsp;разделов для формирования различных отчетов.</p>
+										<p>На&nbsp;сегодняшний день большой массив данных собирается в&nbsp;виде таблиц, что недостаточно информативно, с&nbsp;точки зрения их&nbsp;визуализации. Таблицы неудобно использовать в&nbsp;рамках выступлений или презентаций.</p>
+										<p>Перед участниками хакатона, выбравшими этот кейс, стоит задача разработки информативных и&nbsp;интересных, с&nbsp;точки зрения интерфейса, дашбордов, визуализирующих табличные данные для руководителя и&nbsp;сотрудников Росмолодёжи.</p><a class="tabs__content-btn" href="#">Хочу решить кейс</a>
+									</div>
+									<div class="tabs__case-manager">
+										<div class="tabs__case-manager-btn">
+											<h5>Постановщик кейса</h5>
+										</div>
+										<div class="tabs__case-manager-body">
+											<div class="case-slider case-slider--js swiper">
+												<div class="swiper-wrapper">
 													<div class="case-slider__slide swiper-slide">
 														<div class="case-slider__item">
 															<div class="case-slider__img-wrap">
@@ -320,13 +365,17 @@
 								<div class="tabs__content">
 									<div class="tabs__content-wrap">
 										<h4>Цифровой помощник</h4>
-										<div class="small">Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</div>
+										<div class="small">Разработай цифрового помощника по&nbsp;заполнению заявки на&nbsp;получение грантов для&nbsp;молодёжи России</div>
 										<div class="tabs__tags">
-											<div class="btn">Mobile</div>
-											<div class="btn">Web</div>
-											<div class="btn">CV</div>
+											<div class="row">
+												<div class="col-auto">
+													<div class="btn">Web</div>
+												</div>
+											</div>
 										</div>
-										<p>Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.</p><a class="tabs__content-btn" href="#">Хочу решить кейс</a>
+										<p>У&nbsp;Росмолодёжи есть информационный ресурс (ФГАИС &laquo;Молодежь России&raquo;), обеспечивающий взаимодействие между субъектами молодёжной политики, реализацию мероприятий, программ и&nbsp;мер государственной поддержки для молодёжи, в&nbsp;частности, предоставление грантов для воплощения творческих, патриотических, образовательных, добровольческих и&nbsp;иных проектов. На&nbsp;сегодняшний день в&nbsp;нем зарегистрировано более 2&nbsp;млн. пользователей.</p>
+										<p>При заполнении заявок у&nbsp;участников грантового конкурса часто возникают вопросы. Ежедневно в&nbsp;техническую поддержку поступает более 20&nbsp;обращений по&nbsp;навигации и&nbsp;поиску необходимой информации, более 40&nbsp;обращений по&nbsp;подаче заявки на&nbsp;мероприятия, до&nbsp;150 обращений по&nbsp;вопросу подачи заявки на&nbsp;получение грантовой поддержки.  Основная проблема&nbsp;&mdash; сложный и&nbsp;&laquo;негибкий&raquo; интерфейс грантового модуля ФГАИС &laquo;Молодежь России&raquo;.</p>
+										<p>Во&nbsp;время хакатона участникам нужно разработать цифровой помощник по&nbsp;заполнению заявки для участия в&nbsp;грантовом конкурсе. Помощник может иметь голосовое управление (участникам предлагается предоставить прототип или концепцию голосового модуля цифрового помощника).</p><a class="tabs__content-btn" href="#">Хочу решить кейс</a>
 									</div>
 									<div class="tabs__case-manager">
 										<div class="tabs__case-manager-btn">
@@ -363,78 +412,19 @@
 								</div>
 								<div class="tabs__content">
 									<div class="tabs__content-wrap">
-										<h4>Росмолодёжь-Digital</h4>
-										<div class="small">Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</div>
+										<h4>Молодёжный туризм</h4>
+										<div class="small">Разработай digital-систему для онбординга новых сотрудников с&nbsp;элементами геймификации</div>
 										<div class="tabs__tags">
-											<div class="btn">Mobile</div>
-											<div class="btn">Web</div>
-											<div class="btn">CV</div>
-										</div>
-										<p>Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.</p><a class="tabs__content-btn" href="#">Хочу решить кейс</a>
-									</div>
-									<div class="tabs__case-manager">
-										<div class="tabs__case-manager-btn">
-											<h5>Постановщик кейса</h5>
-										</div>
-										<div class="tabs__case-manager-body">
-											<div class="case-slider case-slider--js swiper">
-												<div class="swiper-wrapper">
-													<div class="case-slider__slide swiper-slide">
-														<div class="case-slider__item">
-															<div class="case-slider__img-wrap">
-																<div class="img-wrap-center"><img src="img/svg/cases-logo-1.svg" alt="" loading="lazy"/>
-																</div>
-															</div>
-															<div class="case-slider__title">Федеральное агентство по&nbsp;делам молодёжи
-															</div>
-														</div>
-													</div>
-													<div class="case-slider__slide swiper-slide">
-														<div class="case-slider__item">
-															<div class="case-slider__img-wrap">
-																<div class="img-wrap-center"><img src="img/svg/cases-logo-1.svg" alt="" loading="lazy"/>
-																</div>
-															</div>
-															<div class="case-slider__title">Федеральное агентство по&nbsp;делам молодёжи
-															</div>
-														</div>
-													</div>
-													<div class="case-slider__slide swiper-slide">
-														<div class="case-slider__item">
-															<div class="case-slider__img-wrap">
-																<div class="img-wrap-center"><img src="img/svg/cases-logo-1.svg" alt="" loading="lazy"/>
-																</div>
-															</div>
-															<div class="case-slider__title">Федеральное агентство по&nbsp;делам молодёжи
-															</div>
-														</div>
-													</div>
+											<div class="row">
+												<div class="col-auto">
+													<div class="btn">Mobile</div>
 												</div>
 											</div>
-											<div class="swiper-pagination"></div>
-											<div class="tabs__links"><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-video ">
-														<use xlink:href="img/svg/sprite.svg#sCases-video"></use>
-													</svg><span>Видеоинтервью</span></a><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sCases-project ">
-														<use xlink:href="img/svg/sprite.svg#sCases-project"></use>
-													</svg><span>Презентация кейса</span></a><a class="tabs__content-link" href="#">
-													<svg class="icon icon-sContact-win ">
-														<use xlink:href="img/svg/sprite.svg#sContact-win"></use>
-													</svg><span>Победители и&nbsp;призеры</span></a></div>
 										</div>
-									</div>
-								</div>
-								<div class="tabs__content">
-									<div class="tabs__content-wrap">
-										<h4>Объединяя молодёжь</h4>
-										<div class="small">Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России</div>
-										<div class="tabs__tags">
-											<div class="btn">Mobile</div>
-											<div class="btn">Web</div>
-											<div class="btn">CV</div>
-										</div>
-										<p>Не&nbsp;следует, однако, забывать, что современная методология разработки позволяет выполнить важные задания по&nbsp;разработке модели развития. Равным образом, экономическая повестка сегодняшнего дня играет важную роль в&nbsp;формировании форм воздействия. Для современного мира убеждённость некоторых оппонентов требует определения и&nbsp;уточнения приоретизации разума над эмоциями. Следует отметить, что высококачественный прототип будущего проекта способствует подготовке и&nbsp;реализации переосмысления внешнеэкономических политик. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также реплицированные с&nbsp;зарубежных источников, современные исследования будут указаны как претенденты на&nbsp;роль ключевых факторов.</p><a class="tabs__content-btn" href="#">Хочу решить кейс</a>
+										<p>Цифровая платформа молодёжного и&nbsp;студенческого туризма студтуризм.рф позволяет студентам бронировать кампусы по&nbsp;всей России. Ежедневно на&nbsp;сайте регистрируются более 29&nbsp;000 новых пользователей. В&nbsp;настоящий момент существует только браузерная версия платформы.</p>
+										<p>При открытии сайта на&nbsp;мобильном устройстве через браузер, могут некорректно отображаться поля для ввода данных, что неудобно для пользователей и&nbsp;способствует их&nbsp;оттоку с&nbsp;ресурса. Молодые люди не&nbsp;могут использовать платформу по&nbsp;дороге на&nbsp;учебу или работу, в&nbsp;отпуске или в&nbsp;путешествии. Таким образом, многие возможности платформы остаются незамеченными.</p>
+										<p>Мобильное приложение позволит подавать и&nbsp;оперативно отслеживать статус заявки на&nbsp;бронирование места размещения, участвовать в&nbsp;мероприятиях и&nbsp;просматривать новости. </p>
+										<p>Участникам хакатона предстоит разработать мобильную версию платформы с&nbsp;удобным интерфейсом и&nbsp;функциями push-уведомлений, постингом в&nbsp;социальную сеть&nbsp;VK, геймификацией и&nbsp;различными другими полезными функциями.</p><a class="tabs__content-btn" href="#">Хочу решить кейс</a>
 									</div>
 									<div class="tabs__case-manager">
 										<div class="tabs__case-manager-btn">
@@ -456,20 +446,20 @@
 													<div class="case-slider__slide swiper-slide">
 														<div class="case-slider__item">
 															<div class="case-slider__img-wrap">
-																<div class="img-wrap-center"><img src="img/svg/cases-logo-1.svg" alt="" loading="lazy"/>
+																<div class="img-wrap-center"><img src="img/svg/cases-logo-2.svg" alt="" loading="lazy"/>
 																</div>
 															</div>
-															<div class="case-slider__title">Федеральное агентство по&nbsp;делам молодёжи
+															<div class="case-slider__title">&laquo;Больше, чем путешествие&raquo;
 															</div>
 														</div>
 													</div>
 													<div class="case-slider__slide swiper-slide">
 														<div class="case-slider__item">
 															<div class="case-slider__img-wrap">
-																<div class="img-wrap-center"><img src="img/svg/cases-logo-1.svg" alt="" loading="lazy"/>
+																<div class="img-wrap-center"><img src="img/svg/cases-logo-3.svg" alt="" loading="lazy"/>
 																</div>
 															</div>
-															<div class="case-slider__title">Федеральное агентство по&nbsp;делам молодёжи
+															<div class="case-slider__title">Министерство науки и&nbsp;высшего образования Российской Федерации
 															</div>
 														</div>
 													</div>
