--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 												<li class="menu-item" itemprop="item"><a href="#sPersons" itemprop="url">Эксперты</a></li>
 												<li class="menu-item" itemprop="item"><a href="#sLogos" itemprop="url">Организаторы</a></li>
 												<li class="menu-item" itemprop="item"><a href="#sContact" itemprop="url">Контакты</a></li>
-												<li class="menu-item" itemprop="item"><a href="#" itemprop="url">FAQ</a></li>
+												<li class="menu-item" itemprop="item"><a href="#sFAQ" itemprop="url">FAQ</a></li>
 											</ul>
 										</nav>
 										<div class="soc d-xl-none">
@@ -1218,7 +1218,7 @@
 					<div class="footer__row row">
 						<div class="col-md-auto"><a href="#">Политика конфиденциальности</a></div>
 						<div class="col-md-auto"><a href="#">Положение о&nbsp;Конкурсе</a></div>
-						<div class="col-md-auto"><a href="#">FAQ</a></div>
+						<div class="col-md-auto"><a href="#sFAQ">FAQ</a></div>
 					</div>
 				</div>
 			</footer>
