--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -45,6 +45,41 @@
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<script>
+			const baseUrl = 'https://lk.hack.its.xyz/api/v1' // for test purposes
+			// const baseUrl = 'https://lk.youthbit.ru/api/v1'
+			
+			function handleRequest(url) {
+				const options = {
+					method: 'GET',
+					'Content-Type': 'application/json'
+				};
+				
+				return fetch(url, options)
+					.then(res => {
+						console.log(res.status);
+						if (res.status !== 200) {
+							throw new Error('API Error');
+						}
+						return res;
+					})
+					.then(succeedRes => succeedRes.json())
+					.catch(error => {
+						console.log(error);
+					});
+			}
+			const template = function(img, title) {
+				return `<div class="sLogos__slide swiper-slide">
+						<div class="sLogos__item">
+							<div class="sLogos__img-wrap"> 
+								<div class="img-wrap-center"><img src="${ img }" alt="" loading="lazy"/></div>
+							</div>
+							<div class="sLogos__title">${ title }</div>
+						</div>
+					</div>`;
+			}
+			
+		</script>
 	</head>
 	<body>
 		<div class="main-wrapper">
