--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,41 @@
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<script>
+			const baseUrl = 'https://lk.hack.its.xyz/api/v1' // for test purposes
+			// const baseUrl = 'https://lk.youthbit.ru/api/v1'
+			
+			function handleRequest(url) {
+				const options = {
+					method: 'GET',
+					'Content-Type': 'application/json'
+				};
+				
+				return fetch(url, options)
+					.then(res => {
+						console.log(res.status);
+						if (res.status !== 200) {
+							throw new Error('API Error');
+						}
+						return res;
+					})
+					.then(succeedRes => succeedRes.json())
+					.catch(error => {
+						console.log(error);
+					});
+			}
+			const template = function(img, title) {
+				return `<div class="sLogos__slide swiper-slide">
+						<div class="sLogos__item">
+							<div class="sLogos__img-wrap"> 
+								<div class="img-wrap-center"><img src="${ img }" alt="" loading="lazy"/></div>
+							</div>
+							<div class="sLogos__title">${ title }</div>
+						</div>
+					</div>`;
+			}
+			
+		</script>
 	</head>
 	<body class="main-page" data-bg="main.jpg">
 		<div class="main-wrapper">
@@ -907,109 +942,24 @@
 						<div class="sLogos__title-sub"> Партнеры
 						</div>
 						<div class="sLogos__slider-wrap">
-							<div class="sLogos__slider sLogos__slider--js swiper-slider mb-0">
-								<div class="swiper-wrapper">
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-									<div class="sLogos__slide swiper-slide">
-										<div class="sLogos__item">
-											<div class="sLogos__img-wrap"> 
-												<div class="img-wrap-center"><img src="img/svg/logo-1.svg" alt="" loading="lazy"/>
-												</div>
-											</div>
-											<div class="sLogos__title">Федеральное агентство по делам молодёжи
-											</div>
-										</div>
-									</div>
-								</div>
+							<script>function getPartners() {
+	
+	const url = `${baseUrl}/site/case`;
+	handleRequest(url).then(res => {
+		// console.log(res.cases)
+		const arr = res.companies;
+		for (const item of arr) {
+			console.log(item);
+			
+			document.querySelector(".sLogos__slider--partners-js .swiper-wrapper").insertAdjacentHTML("beforeend", template(item.avatar_url, item.description));
+		}
+	});
+}
+
+getPartners();
+							</script>
+							<div class="sLogos__slider sLogos__slider--partners sLogos__slider--partners-js sLogos__slider--js swiper-slider mb-0">
+								<div class="swiper-wrapper"></div>
 									<div class="row d-lg-none">
 										<div class="col">
 											<div class="swiper-pagination"></div>
