--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>17-19 февраля 2023 г.:  Хакатон «‎Молодёжный бит»‎ для талантливых ИТ-специалистов</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!">
+<meta property="og:url" content="https://youthbit.ru/" />
 <meta property="og:image" content="img/og-imge.png" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="17-19 февраля 2023 г.:  Хакатон «‎Молодёжный бит»‎ для талантливых ИТ-специалистов" />
