--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -5,7 +5,7 @@
 		<title>Модальные окна</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!">
 <meta property="og:url" content="https://youthbit.ru/" />
-<meta property="og:image" content="img/og-image.png" />
+<meta property="og:image" content="https://storage.yandexcloud.net/mp-hackathon/mb.png" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="17-19 февраля 2023 г.:  Хакатон «‎Молодёжный бит»‎ для талантливых ИТ-специалистов" />
 <meta property="og:description" content="Всероссийский хакатон «Молодёжный бит» для digital-поколения: собери команду, реши кейс, выиграй 250 000 рублей и путешествие по России!" />
