--- a/public/index.html
+++ b/public/index.html
@@ -310,13 +310,7 @@ const template = function (img, title, a) {
 										<div class="tabs__tags">
 											<div class="row">
 												<div class="col-auto">
-													<div class="btn">Управление персоналом</div>
-												</div>
-												<div class="col-auto">
-													<div class="btn">Mobile</div>
-												</div>
-												<div class="col-auto">
-													<div class="btn">Чат-бот</div>
+													<div class="btn">HR</div>
 												</div>
 											</div>
 										</div>
