--- a/public/index.html
+++ b/public/index.html
@@ -720,7 +720,7 @@ getOrgs();
 						<div class="section-title">
 							<h2>Организаторы и Партнёры</h2>
 						</div>
-						<div class="sLogos__title-sub"> Организаторы
+						<div class="sLogos__title-sub"> Организатор
 						</div>
 						<div class="sLogos__slider-wrap">
 							<div class="sLogos__slider sLogos__slider--org sLogos__slider--org-js sLogos__slider--js swiper-slider">
