--- a/public/02-best-teams.html
+++ b/public/02-best-teams.html
@@ -258,7 +258,7 @@ const template = function (img, title, a) {
 											<h4>Шортлист</h4>
 											<div class="sBestTeams__row row">
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>IV</span><small>место</small>
 															</div>
@@ -278,7 +278,7 @@ const template = function (img, title, a) {
 													</div>
 												</div>
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>V</span><small>место</small>
 															</div>
@@ -298,7 +298,7 @@ const template = function (img, title, a) {
 													</div>
 												</div>
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>VI</span><small>место</small>
 															</div>
@@ -396,7 +396,7 @@ const template = function (img, title, a) {
 											<h4>Шортлист</h4>
 											<div class="sBestTeams__row row">
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>IV</span><small>место</small>
 															</div>
@@ -416,7 +416,7 @@ const template = function (img, title, a) {
 													</div>
 												</div>
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>V</span><small>место</small>
 															</div>
@@ -436,7 +436,7 @@ const template = function (img, title, a) {
 													</div>
 												</div>
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>VI</span><small>место</small>
 															</div>
@@ -534,7 +534,7 @@ const template = function (img, title, a) {
 											<h4>Шортлист</h4>
 											<div class="sBestTeams__row row">
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>IV</span><small>место</small>
 															</div>
@@ -554,7 +554,7 @@ const template = function (img, title, a) {
 													</div>
 												</div>
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>V</span><small>место</small>
 															</div>
@@ -574,7 +574,7 @@ const template = function (img, title, a) {
 													</div>
 												</div>
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>VI</span><small>место</small>
 															</div>
@@ -672,7 +672,7 @@ const template = function (img, title, a) {
 											<h4>Шортлист</h4>
 											<div class="sBestTeams__row row">
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>IV</span><small>место</small>
 															</div>
@@ -692,7 +692,7 @@ const template = function (img, title, a) {
 													</div>
 												</div>
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>V</span><small>место</small>
 															</div>
@@ -712,7 +712,7 @@ const template = function (img, title, a) {
 													</div>
 												</div>
 												<div class="col-12 col-lg-4">
-													<div class="best-item">
+													<div class="best-item best-item--light">
 														<div class="best-item__head">
 															<div class="best-item__place"><span>VI</span><small>место</small>
 															</div>
